# connect-ip-tunnel-gui

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
resources/: app.icns  app.rc  resources.qrc
src/: CoreProcess.cpp  CoreProcess.h  EditNodeDialog.cpp  EditNodeDialog.h  MainWindow.cpp  MainWindow.h  NodeManager.cpp  NodeManager.h  StatsPoller.cpp  StatsPoller.h  SystemTray.cpp  SystemTray.h  TunnelNode.h  main.cpp
ui/: EditNodeDialog.ui  MainWindow.ui
